sjengida/g2/reset_board
/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/reset_board/src/utils.c:1577:23: error: use of undeclared identifier 'unk_41E960'
qmemcpy( init_board, &unk_41E960, sizeof( init_board)); 
                      ^
1 error generated.
make: *** [/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/reset_board/src/obj/utils.o] Error 1
